--- a/index.html
+++ b/index.html
@@ -1,6 +1,74 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Test</h1>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Bootstrap CSS -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+            rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+            crossorigin="anonymous"
+        />
+
+        <!-- My CSS -->
+        <link
+            href="css/main.css"
+            rel="stylesheet"
+        />
+        <link
+            href="css/index.css"
+            rel="stylesheet"
+        />
+
+        <title>ST0PCHA's Page</title>
+    </head>
+    <body>
+
+        <header>
+            <nav class="top-nav">
+                <ul class="nav nav-pills">
+                    <li class="nav-title" class="nav-item">ST0PCHA</li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://discord.gg/DG3k5w6QW3">Discord</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kali/index.html">KALI Bot</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <!-- Main Section with the title and invite buttons -->
+            <section id="invite-main">
+                <h1 id="bot-title">Stanislav (ST0PCHA) Simakhin</h1>
+                <p></p>
+                <!-- <img src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/91_Discord_logo_logos-512.png" width="32" height="32"> -->
+                <div id="invite-commands-buttons">
+                    <a class="btn btn-dark" href="https://discord.gg/DG3k5w6QW3" target="_blank" role="button" id="invite-button">
+                        Discord Server
+                    </a>
+                    <a class="btn btn-dark" href="https://discord.com/api/oauth2/authorize?client_id=792818909844996139&permissions=8&scope=bot" target="_blank" role="button" id="invite-button">
+                        KALI Bot
+                    </a>
+                    <a class="btn btn-dark" href="https://github.com/St0pcha" target="_blank" role="button" id="invite-button">
+                        GitHub
+                    </a>
+                    <a class="btn btn-dark" href="https://steamcommunity.com/id/st0p_04ka/" target="_blank" role="button" id="invite-button">
+                        Steam
+                    </a>
+                    <a class="btn btn-dark" href="https://vk.com/st0pcha" target="_blank" role="button" id="invite-button">
+                        VKontakte
+                    </a>
+                </div>
+
+            </section>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
