--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- Bootstrap CSS -->
-        <link
+        <link   
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
             rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
             crossorigin="anonymous"
@@ -28,38 +28,34 @@
         <header>
             <nav class="top-nav">
                 <ul class="nav nav-pills">
-                    <li class="nav-title" class="nav-item">ST0PCHA</li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://discord.gg/DG3k5w6QW3">Discord</a>
+                    <li class="nav-title" class="nav-item">ST0PCHA'S PAGE ｜</li>
+                    <li class="nav-title">
+                        <a class="nav-title" href="kali/index.html">KALI Бот</a>｜
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="kali/index.html">KALI Bot</a>
+                    <li class="nav-title">
+                        <a class="nav-title" href="https://discord.gg/DG3k5w6QW3">Discord Сервер</a>
                     </li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <!-- Main Section with the title and invite buttons -->
             <section id="invite-main">
-                <h1 id="bot-title">Stanislav (ST0PCHA) Simakhin</h1>
-                <p></p>
-                <!-- <img src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/91_Discord_logo_logos-512.png" width="32" height="32"> -->
+                <h1 id="bot-title">Станислав (ST0PCHA) Симахин</h1>
+                <br>
+                
                 <div id="invite-commands-buttons">
-                    <a class="btn btn-dark" href="https://discord.gg/DG3k5w6QW3" target="_blank" role="button" id="invite-button">
-                        Discord Server
+                    <a class="btn btn-dark" href="kali/index.html" target="_blank" role="button" id="invite-button">
+                        KALI Бот<img src="https://cdn2.iconfinder.com/data/icons/zeshio-s-social-media/200/Social_Media_Icons_Edged_Highlight-12-256.png" width="32" height="32">
                     </a>
-                    <a class="btn btn-dark" href="https://discord.com/api/oauth2/authorize?client_id=792818909844996139&permissions=8&scope=bot" target="_blank" role="button" id="invite-button">
-                        KALI Bot
+                    <a class="btn btn-dark" href="https://discord.gg/DG3k5w6QW3" target="_blank" role="button" id="invite-button">
+                        Discord Сервер<img src="https://cdn2.iconfinder.com/data/icons/zeshio-s-social-media/200/Social_Media_Icons_Edged_Highlight-12-256.png" width="32" height="32">
                     </a>
                     <a class="btn btn-dark" href="https://github.com/St0pcha" target="_blank" role="button" id="invite-button">
-                        GitHub
+                        GitHub<img src="https://cdn3.iconfinder.com/data/icons/social-media-logos-ii-filled-line/2048/5347_-_Github-256.png" width="32" height="32">
                     </a>
                     <a class="btn btn-dark" href="https://steamcommunity.com/id/st0p_04ka/" target="_blank" role="button" id="invite-button">
-                        Steam
-                    </a>
-                    <a class="btn btn-dark" href="https://vk.com/st0pcha" target="_blank" role="button" id="invite-button">
-                        VKontakte
+                        Steam<img src="https://cdn2.iconfinder.com/data/icons/zeshio-s-social-media/200/Social_Media_Icons_Edged_Highlight_16-16-256.png" width="32" height="32">
                     </a>
                 </div>
 
