--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul class="nav nav-pills">
                     <li class="nav-title" class="nav-item">ST0PCHA'S PAGE ｜</li>
                     <li class="nav-title">
-                        <a class="nav-title" href="kali/index.html">KALI Бот</a>｜
+                        <a class="nav-title" href="kali/index">KALI Бот</a>｜
                     </li>
                     <li class="nav-title">
                         <a class="nav-title" href="https://discord.gg/DG3k5w6QW3">Discord Сервер</a>
@@ -45,7 +45,7 @@
                 <br>
                 
                 <div id="invite-commands-buttons">
-                    <a class="btn btn-dark" href="kali/index.html" target="_blank" role="button" id="invite-button">
+                    <a class="btn btn-dark" href="kali/index" target="_blank" role="button" id="invite-button">
                         KALI Бот<img src="https://cdn2.iconfinder.com/data/icons/zeshio-s-social-media/200/Social_Media_Icons_Edged_Highlight-12-256.png" width="32" height="32">
                     </a>
                     <a class="btn btn-dark" href="https://discord.gg/DG3k5w6QW3" target="_blank" role="button" id="invite-button">
