--- a/index.html
+++ b/index.html
@@ -1,70 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <title>ST0PCHA</title>
+    <meta name="description" content="ST0PCHA's page">
+    <meta name="author" content="ST0PCHA" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <!-- Bootstrap CSS -->
-        <link   
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-            rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-            crossorigin="anonymous"
-        />
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+</head>
+<body>
 
-        <!-- My CSS -->
-        <link
-            href="css/main.css"
-            rel="stylesheet"
-        />
-        <link
-            href="css/index.css"
-            rel="stylesheet"
-        />
+    <div id="particles-js"></div>
 
-        <title>ST0PCHA's Page</title>
-    </head>
-    <body>
+    <script src="assets/js/particles.js"></script>
+    <script src="assets/js/app.js"></script>
 
-        <header>
-            <nav class="top-nav">
-                <ul class="nav nav-pills">
-                    <li class="nav-title" class="nav-item">ST0PCHA'S PAGE ｜</li>
-                    <li class="nav-title">
-                        <a class="nav-title" href="kali/index">KALI Бот</a>｜
-                    </li>
-                    <li class="nav-title">
-                        <a class="nav-title" href="https://discord.gg/DG3k5w6QW3">Discord Сервер</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-
-        <main>
-            <section id="invite-main">
-                <h1 id="bot-title">Станислав (ST0PCHA) Симахин</h1>
-                <br>
-                
-                <div id="invite-commands-buttons">
-                    <a class="btn btn-dark" href="kali/index" target="_blank" role="button" id="invite-button">
-                        KALI Бот<img src="https://cdn2.iconfinder.com/data/icons/zeshio-s-social-media/200/Social_Media_Icons_Edged_Highlight-12-256.png" width="32" height="32">
-                    </a>
-                    <a class="btn btn-dark" href="https://discord.gg/DG3k5w6QW3" target="_blank" role="button" id="invite-button">
-                        Discord Сервер<img src="https://cdn2.iconfinder.com/data/icons/zeshio-s-social-media/200/Social_Media_Icons_Edged_Highlight-12-256.png" width="32" height="32">
-                    </a>
-                    <a class="btn btn-dark" href="https://github.com/St0pcha" target="_blank" role="button" id="invite-button">
-                        GitHub<img src="https://cdn3.iconfinder.com/data/icons/social-media-logos-ii-filled-line/2048/5347_-_Github-256.png" width="32" height="32">
-                    </a>
-                    <a class="btn btn-dark" href="https://steamcommunity.com/id/st0p_04ka/" target="_blank" role="button" id="invite-button">
-                        Steam<img src="https://cdn2.iconfinder.com/data/icons/zeshio-s-social-media/200/Social_Media_Icons_Edged_Highlight_16-16-256.png" width="32" height="32">
-                    </a>
-                </div>
-
-            </section>
-
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+            crossorigin="anonymous">
+    </script>
+</body>
+</body>
 </html>
