--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>ST0PCHA</title>
-    <meta name="description" content="ST0PCHA's page">
-    <meta name="author" content="ST0PCHA" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+     <head>
+          <title>st0pcha's site</title>
+          <link type="image/x-icon" rel="icon" href="./assets/avatar.png">
+          <link rel="stylesheet" href="./assets/style.css">
+          <meta name="viewport" content="width=device-width", initial-scale=1>
+     </head>
+     <body>
+          <div>
+               <img class="avatar" src="./assets/avatar.png" width="333" height="333">
+               <h2 class="text">Stanislav <code><i>st0pcha.</i></code> Simahin</h2>
+               <h1 class="small-text">👋 Hi, I'm 14 and my name is Stas.<br><code>Java Jr. Dev</code></h1>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-</head>
-<body>
-
-    <div id="particles-js"></div>
-
-    <script src="assets/js/particles.js"></script>
-    <script src="assets/js/app.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-            crossorigin="anonymous">
-    </script>
-</body>
-</body>
+               <a href="https://t.me/st0pcha"><img src="https://img.shields.io/badge/Telegram-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white)"></a>
+               <a href="https://discord.gg/9d4Z3Njm3e"><img src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white)"></a>
+               <a href="https://github.com/st0pcha"><img src="https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&logo=github&logoColor=white"></a>
+          </div>
+     </body>
+     
 </html>
