--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                <h2 class="text">Stanislav <code><i>st0pcha.</i></code> Simahin</h2>
                <h1 class="small-text">👋 Hi, I'm 14 and my name is Stas.<br><code>Java Jr. Dev</code></h1>
 
-               <a href="https://t.me/st0pcha"><img src="https://img.shields.io/badge/Telegram-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white)"></a>
-               <a href="https://discord.gg/9d4Z3Njm3e"><img src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white)"></a>
-               <a href="https://github.com/st0pcha"><img src="https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&logo=github&logoColor=white"></a>
+               <a href="https://t.me/st0pcha"><img src="https://img.shields.io/badge/Telegram-090909?style=for-the-badge&logo=Telegram"></a>
+               <a href="https://discord.gg/9d4Z3Njm3e"><img src="https://img.shields.io/badge/Discord-090909?style=for-the-badge&logo=Discord"></a>
+               <a href="https://github.com/st0pcha"><img src="https://img.shields.io/badge/Steam-090909?style=for-the-badge&logo=Steam"></a>
           </div>
      </body>
      
