--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
                <a href="https://t.me/st0pcha"><img src="https://img.shields.io/badge/Telegram-090909?style=for-the-badge&logo=Telegram"></a>
                <a href="https://discord.gg/9d4Z3Njm3e"><img src="https://img.shields.io/badge/Discord-090909?style=for-the-badge&logo=Discord"></a>
-               <a href="https://github.com/st0pcha"><img src="https://img.shields.io/badge/Steam-090909?style=for-the-badge&logo=Steam"></a>
+               <a href="https://github.com/st0pcha"><img src="https://img.shields.io/badge/GitHub-090909?style=for-the-badge&logo=GitHub"></a>
           </div>
      </body>
      
