--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
           <div>
                <img class="avatar" src="./assets/avatar.png" width="333" height="333">
                <h2 class="text">Stanislav <code><i>st0pcha.</i></code> Simahin</h2>
-               <h1 class="small-text">👋 Hi, I'm 14 and my name is Stas.<br><code>Java Jr. Dev</code></h1>
+               <h2 class="small-text">👋 Hi, I'm 14 and my name is Stas.<br><code>Java Jr. Dev</code></h1>
 
                <a href="https://t.me/st0pcha" target="_blank"><img src="https://img.shields.io/badge/Telegram-090909?style=for-the-badge&logo=Telegram"></a>
                <a href="https://discord.gg/9d4Z3Njm3e" target="_blank"><img src="https://img.shields.io/badge/Discord-090909?style=for-the-badge&logo=Discord"></a>
                <a href="https://github.com/st0pcha" target="_blank"><img src="https://img.shields.io/badge/GitHub-090909?style=for-the-badge&logo=GitHub"></a>
+               
+               <div id="time"></div>
           </div>
+          <script src=./assets/time.js></script>
      </body>
-     
 </html>
