--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
                <a href="https://t.me/st0pcha" target="_blank"><img src="https://img.shields.io/badge/Telegram-090909?style=for-the-badge&logo=Telegram"></a>
                <a href="https://discord.gg/9d4Z3Njm3e" target="_blank"><img src="https://img.shields.io/badge/Discord-090909?style=for-the-badge&logo=Discord"></a>
                <a href="https://github.com/st0pcha" target="_blank"><img src="https://img.shields.io/badge/GitHub-090909?style=for-the-badge&logo=GitHub"></a>
-               
+          </div>
+          <div class="footer">
+               <!--
+               <div id="social"> 
+                    <a href="https://vk.com/st0pcha" target="_blank"><img src="https://img.shields.io/badge/ВКонтакте-090909?style=for-the-badge&logo=vk"></a>
+                    <a href="https://t.me/st0pcha" target="_blank"><img src="https://img.shields.io/badge/Telegram-090909?style=for-the-badge&logo=Telegram"></a>
+                    <a href="https://discord.gg/9d4Z3Njm3e" target="_blank"><img src="https://img.shields.io/badge/Discord-090909?style=for-the-badge&logo=Discord"></a>
+                    <a href="https://github.com/st0pcha" target="_blank"><img src="https://img.shields.io/badge/GitHub-090909?style=for-the-badge&logo=GitHub"></a>
+               </div>
+               -->
                <div id="time"></div>
+               <a href="./ru.html"><h2 class="smaller-text">Переключиться на русский</h1></a>
           </div>
           <script src=./assets/time.js></script>
      </body>
