--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                </div>
                -->
                <div id="time"></div>
-               <a href="./ru.html"><h2 class="smaller-text">Переключиться на русский</h1></a>
+               <a href="https://st0pcha.github.io/ru"><h2 class="smaller-text">Переключиться на русский</h1></a>
           </div>
           <script src=./assets/time.js></script>
      </body>
