--- a/ru.html
+++ b/ru.html
@@ -19,7 +19,7 @@
             </div>
             <div class="footer">
                 <div id="time"></div>
-                <a href="https://st0pcha.github.io/index"><h2 class="smaller-text">Go to English</h1></a>
+                <a href="https://st0pcha.github.io/"><h2 class="smaller-text">Go to English</h1></a>
             </div>
             <script src=./assets/time.js></script>
      </body>
